[package]
name = "chase"
version = "0.1.8"
authors = ["lloydmeta <lloydmeta@gmail.com>"]
license = "MIT"
description = """
Async + sync file-following for people who care about file rotatons and line numbers.
"""
documentation = "https://docs.rs/chase"
repository = "https://github.com/lloydmeta/chase-rs"
keywords = ["chase", "logs", "tail", "log-tailing", "file-watch"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "sync"] }

[target."cfg(windows)".dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
